# 202109705_EDD_Practica

./: Aviones.json  CMakeLists.txt  CargaAviones.cpp  CargaAviones.h  CargaComandos.cpp  CargaComandos.h  CargaPasajeros.cpp  CargaPasajeros.h  CircularDobleDis.h  CircularDobleMan.h  ColaPas.h  ListaED.h  ListaPas.h  Main.cpp  MiVector.h  MyArrasy.h  Pasajeros.json  PilaEquipaje.h  README.md  nodo.h  nodoList.h  nodoPas.h
